# phalar

./: .gitignore  LICENSE  README.md  model_usage_example.py  pyproject.toml  synth_utils.py  train.py
configs/: test_clap.yaml  test_mert.yaml  train_cocola.yaml  train_mert_bilinear.yaml  train_mert_complex.yaml  train_phalar.yaml  train_phalar_avg.yaml  train_phalar_cosine.yaml  train_phalar_hermitian.yaml  train_phalar_mel.yaml  train_phalar_psd.yaml  train_phalar_real.yaml
contrastive_model/: complex_stuff.py  constants.py  contrastive_model.py  contrastive_model_data.py  efficientnet_backbone.py  freq_time_separable_encoder.py  learned_spectral_pooling.py  mert.py  similarity_ops.py  utils.py
data/: __init__.py  coco_chorales_contrastive_exclusive.py  coco_chorales_contrastive_online.py  moisesdb_contrastive_exclusive.py  moisesdb_contrastive_online.py  slakh2100_contrastive_exclusive.py  slakh2100_contrastive_online.py
data_sampling/: sample_musdb.py  split_moisesdb.py
feature_extraction/: feature_extraction.py
listening_tests/: results_audiobox_ce.json  results_audiobox_cu.json  results_audiobox_pc.json  results_audiobox_pq.json  results_cdpam.json  results_clap.json  results_cocola.json  results_phalar.json  results_visqol.json
listening_tests/user_ratings/: results_01.json  results_02.json  results_03.json  (+19 more)
tests_code/: cdpam_wrapper_test.py  clap_wrapper_test.py  stems_similarity_cdpam.py  stems_similarity_clap.py  stems_similarity_cocola.py  stems_similarity_phalar.py
wrappers/: cdpam_wrapper.py  clap_wrapper.py  phalar_downstream_wrapper.py
(+6 files in other folders)
