[project]
name = "phalar"
version = "0.1.0"
description = "PyProject toml for PHALAR ICML2026 submission code"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "cdpam>=0.0.6",
    "cython>=3.2.3",
    "efficientnet-pytorch==0.7.1",
    "huggingface-hub<1.0",
    "jsonargparse[signatures]>=4.42.0",
    "librosa>0.10.1",
    "lightning==2.2.1",
    "matplotlib>=3.10.7",
    "mir-eval>=0.8.2",
    "mirdata>=1.0.0",
    "muon-optimizer",
    "nnaudio>=0.3.4",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "pyfluidsynth>=1.3.4",
    "scipy>=1.16.2",
    "soundfile==0.12.1",
    "statsmodels>=0.14.6",
    "setuptools<81",
    "torch==2.7",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "tqdm==4.66.2",
    "wandb>=0.22.2",
    "transformers>=4.57.6",
    "jams>=0.3.5",
]

[tool.uv.sources]
muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
